add new project

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 
         <div class="projeto ativo">
           <a
-            href="https://amiltonlucas.github.io/Gta-main-page/"
+            href="https://frontdevstudio1.github.io/Burguer-Town/"
             target="_blank"
           >
-            <img src="src/images/projeto-gta.png" alt="Projeto Calculadora" />
-            <h3>Projeto Landing Page GTA V</h3>
+            <img src="src/images/projeto-BurguerTown.png" alt="Projeto Burguer-Town (Cardapio Online)" />
+            <h3>Projeto Cardapio Online</h3>
             <div class="informacoes-projeto">
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
               <p>🔗 Ver no GitHub Pages</p>
@@ -158,7 +158,7 @@
           <a href="https://frontdevstudio1.github.io/Web-Scraping-Landing-page/" target="_blank">
             <img
               src="src/images/interface.png"
-              alt="Projeto landing page Mario"
+              alt="Projeto Web Scraping"
             />
             <h3>Projeto Web Scraping</h3>
             <div class="informacoes-projeto">
